--- a/css/new-age.css
+++ b/css/new-age.css
@@ -70,6 +70,10 @@ section h2 {
   font-size: 50px;
 }
 
+figure figcaption {
+    text-align: center;
+}
+
 #mainNav {
   border-color: rgba(34, 34, 34, 0.05);
   background-color: white;
